added Swiperjs to gallery

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
@@ -121,7 +123,37 @@
           </h3>
         </div>
       </div>
+
+      <div class="gallery container">
+        <h2 class="gallery__title">
+          Галерея
+        </h2>
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
+            </div>
+          </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
