header mobile was done

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/favicon.svg">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__nav">
+          <a href="#" class="header__menu"></a>
+        
+          <div class="header__logo">
+            <a href="/" class="logo">
+              NA<br>MU
+            </a>
+          </div>
+        </div>
+        <div class="header__content">
+          <h1 class="header__title">
+            ХУДОЖНІЙ <br>МУЗЕЙ
+          </h1>
+
+          <a class="header__ticket">
+            <p class="header__ticket--text">
+              КВИТКИ
+            </p>
+            <img
+              class="header__ticket--arrow"
+              src="./images/arrow.svg"
+              alt="arrow icon"
+            >
+          </a>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
+
+
