--- a/src/index.html
+++ b/src/index.html
@@ -152,6 +152,33 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
+
+      <div class="subscription">
+        <div class="container">
+          <h2 class="subscription__title">
+            Підписка
+          </h2>
+  
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+  
+          <form action="#" method="get" class="subscription__form">
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="subscription__form-input"
+            >
+            <button type="submit"  class="subscription__form-button">
+              <img
+                src="./images/icons/Arrow.svg"
+                alt="arrow"
+                class="button__arrow-img"
+              >
+            </button>
+          </form>
+        </div>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
