header for wide desktop was added

--- a/src/index.html
+++ b/src/index.html
@@ -27,16 +27,24 @@
             ХУДОЖНІЙ <br>МУЗЕЙ
           </h1>
 
-          <a class="header__ticket">
-            <p class="header__ticket--text">
-              КВИТКИ
+          <div class="header__wrap-ticket">
+            <a class="header__ticket">
+              <p class="header__ticket--text">
+                КВИТКИ
+              </p>
+              <img
+                class="header__ticket--arrow"
+                src="./images/arrow.svg"
+                alt="arrow icon"
+              >
+            </a>
+          </div>
+
+          <div class="header__vertical">
+            <p class="header__vertical-text">
+              ПОДІЇ
             </p>
-            <img
-              class="header__ticket--arrow"
-              src="./images/arrow.svg"
-              alt="arrow icon"
-            >
-          </a>
+          </div>
         </div>
       </div>
     </header>
