--- a/src/index.html
+++ b/src/index.html
@@ -332,11 +332,29 @@
                   target="_blank"
                 >
                   вул. М. Грушевського, 6; Київ, 01001
-                  <br>
+                </a>
+
+                <a
+                  href="https://goo.gl/maps/gK3EHFkpYW44rYS97"
+                  class="footer__phone-link footer__map-link"
+                  target="_blank"
+                >
                   тел. +38 (044) 278-13-57
-                  <br>
+                </a>
+
+                <a
+                  href="https://goo.gl/maps/gK3EHFkpYW44rYS97"
+                  class="footer__fax-link footer__map-link"
+                  target="_blank"
+                >
                   факс +38 (044) 278-74-54
-                  <br>
+                </a>
+
+                <a
+                  href="https://goo.gl/maps/gK3EHFkpYW44rYS97"
+                  class="footer__email-link footer__map-link"
+                  target="_blank"
+                >
                   e-mail: info@namu.kiev.ua
                 </a>
               </div>
