--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +9,110 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
-  <body>
+  <body class="body">
+    <div class="menu body__menu header__menu" id="menu">
+      <div class="menu__container container">
+        <a href="#">
+          <img
+            src="./images/icons/X-menu.svg"
+            alt=""
+            class="menu__burger-close"
+          >
+        </a>
+
+        <nav class="nav header__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#gallery" class="nav__link">
+                Галерея
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Про Нас
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#events" class="nav__link">
+                Виставки та події
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#contacts" class="nav__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+      </nav>
+
+      <div class="schedule header__schedule">
+        <span class="schedule__title">
+          Графік роботи
+        </span>
+
+        <ul class="schedule__list">
+          <li class="schedule__list-item">
+            <span class="schedule__list-time">
+              12:00 — 20:00
+            </span>
+            середа
+          </li>
+
+          <li class="schedule__list-item">
+            <span class="schedule__list-time">
+              12:00 — 20:00
+            </span>
+            четвер
+          </li>
+
+          <li class="schedule__list-item">
+            <span class="schedule__list-time">
+              12:00 — 20:00
+            </span>
+            п’ятниця
+          </li>
+
+          <li class="schedule__list-item">
+            <span class="schedule__list-time">
+              12:00 — 20:00
+            </span>
+            субота
+          </li>
+
+          <li class="schedule__list-item">
+            <span class="schedule__list-time">
+              12:00 — 20:00
+            </span>
+            неділя
+          </li>
+
+          <li class="schedule__list-item">
+            <span class="schedule__list-time">
+              Вихідні:
+            </span> 
+              понеділок, вівторок
+          </li>
+        </ul>
+
+        <span>
+          Каса припиняє роботу за 1 годину до закриття музею
+        </span>
+      </div>
+      </div>
+    </div>
     <header class="header">
       <div class="header__half-1">
         <div class="container">
+          <a href="#menu">
+            <img
+              src="./images/icons/Burger.svg"
+              alt=""
+              class="menu__burger-open"
+            >
+          </a>
           <a href="#">
             <h2 class="logo">
               NA
@@ -179,138 +279,139 @@
           </form>
         </div>
       </div>
-
-      <footer class="footer">
-        <div class="footer__container container">
-          <a href="#">
-            <h2 class="footer__logo logo">
-              NA
-              <br>
-              MU
-            </h2>
-          </a>
-  
-          <div class="footer__social">
-            <a href="https://www.facebook.com/" target="_blank">
-              <img src="./images/icons/Facebook.svg" alt="facebook.com">
-            </a>
-  
-            <a href="https://www.instagram.com/" target="_blank">
-              <img src="./images/icons/instagram.svg" alt="instagram.com">
-            </a>
-          </div>
-  
-          <div class="schedule footer__schedule">
-            <span class="schedule__title">
-              Графік роботи
-            </span>
-  
-            <ul class="schedule__list">
-              <li class="schedule__list-item">
-                <span class="schedule__list-time">
-                  12:00 — 20:00
-                </span>
-                середа
-              </li>
-
-              <li class="schedule__list-item">
-                <span class="schedule__list-time">
-                  12:00 — 20:00
-                </span>
-                четвер
-              </li>
-
-              <li class="schedule__list-item">
-                <span class="schedule__list-time">
-                  12:00 — 20:00
-                </span>
-                п’ятниця
-              </li>
-
-              <li class="schedule__list-item">
-                <span class="schedule__list-time">
-                  12:00 — 20:00
-                </span>
-                субота
-              </li>
-
-              <li class="schedule__list-item">
-                <span class="schedule__list-time">
-                  12:00 — 20:00
-                </span>
-                неділя
-              </li>
-
-              <li class="schedule__list-item">
-                Вихідні понеділок, вівторок
-              </li>
-            </ul>
-
-            <span>
-              Каса припиняє роботу за 1 годину до закриття музею
-            </span>
-          </div>
-  
-          <div class="footer__contacts" id="contacts">
-            <span class="footer__contacts-title">
-              Контакти:
-            </span>
-  
-            <p class="footer__contacts-info">
-              вул. М. Грушевського, 6; Київ, 01001
-              <br>
-              тел. +38 (044) 278-13-57
-              <br>
-              факс +38 (044) 278-74-54
-              <br>
-              e-mail: info@namu.kiev.ua
-            </p>
-          </div>
-  
-          <!-- <a href="#" class="go-up footer__go-up">
-            <img src="./images/icons/up-arrow.svg" alt="arrow up">
-          </a> -->
-  
-          <nav class="menu footer__menu">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a href="#gallery" class="menu__link">
-                  Галерея
-                </a>
-              </li>
-  
-              <li class="menu__item">
-                <a href="#" class="menu__link">
-                  Про Нас
-                </a>
-              </li>
-  
-              <li class="menu__item">
-                <a href="#events" class="menu__link">
-                  Виставки та події
-                </a>
-              </li>
-  
-              <li class="menu__item">
-                <a href="#contacts" class="menu__link">
-                  Контакти
-                </a>
-              </li>
-            </ul>
-          </nav>
-  
-          <div class="footer__rights">
-            <span class="footer__rights-item">
-              Copyright © 2019. All Rights Reserved.
-            </span>
-  
-            <span class="footer__rights-item">
-              Designed by Zhyriada Marina
-            </span>
-          </div>
-        </div>
-      </footer>
     </main>
+
+    <footer class="footer">
+      <div class="footer__container container">
+        <a href="#">
+          <h2 class="footer__logo logo">
+            NA
+            <br>
+            MU
+          </h2>
+        </a>
+
+        <div class="footer__social">
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="./images/icons/Facebook.svg" alt="facebook.com">
+          </a>
+
+          <a href="https://www.instagram.com/" target="_blank">
+            <img src="./images/icons/instagram.svg" alt="instagram.com">
+          </a>
+        </div>
+
+        <div class="schedule footer__schedule">
+          <span class="schedule__title">
+            Графік роботи
+          </span>
+
+          <ul class="schedule__list">
+            <li class="schedule__list-item">
+              <span class="schedule__list-time">
+                12:00 — 20:00
+              </span>
+              середа
+            </li>
+
+            <li class="schedule__list-item">
+              <span class="schedule__list-time">
+                12:00 — 20:00
+              </span>
+              четвер
+            </li>
+
+            <li class="schedule__list-item">
+              <span class="schedule__list-time">
+                12:00 — 20:00
+              </span>
+              п’ятниця
+            </li>
+
+            <li class="schedule__list-item">
+              <span class="schedule__list-time">
+                12:00 — 20:00
+              </span>
+              субота
+            </li>
+
+            <li class="schedule__list-item">
+              <span class="schedule__list-time">
+                12:00 — 20:00
+              </span>
+              неділя
+            </li>
+
+            <li class="schedule__list-item">
+              Вихідні понеділок, вівторок
+            </li>
+          </ul>
+
+          <span>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </span>
+        </div>
+
+        <div class="footer__contacts" id="contacts">
+          <span class="footer__contacts-title">
+            Контакти:
+          </span>
+
+          <p class="footer__contacts-info">
+            вул. М. Грушевського, 6; Київ, 01001
+            <br>
+            тел. +38 (044) 278-13-57
+            <br>
+            факс +38 (044) 278-74-54
+            <br>
+            e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+
+        <!-- <a href="#" class="go-up footer__go-up">
+          <img src="./images/icons/up-arrow.svg" alt="arrow up">
+        </a> -->
+        <div class="line"></div>
+
+        <nav class="nav footer__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#gallery" class="nav__link">
+                Галерея
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                Про Нас
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#events" class="nav__link">
+                Виставки та події
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#contacts" class="nav__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__rights">
+          <span class="footer__rights-item">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+
+          <span class="footer__rights-item">
+            Designed by Zhyriada Marina
+          </span>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
