go-up button done

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,10 @@
   <body class="body">
     <div class="menu body__menu header__menu" id="menu">
       <div class="menu__container container">
-        <a href="#">
+        <a href="#" class="menu__burger-close">
           <img
             src="./images/icons/X-menu.svg"
-            alt=""
-            class="menu__burger-close"
+            alt="cross"
           >
         </a>
 
@@ -103,23 +102,24 @@
       </div>
       </div>
     </div>
+
     <header class="header">
       <div class="header__half-1">
-        <div class="container">
-          <a href="#menu">
+        <div class="header__container container">
+          <a href="#menu" class="header__burger-open">
             <img
               src="./images/icons/Burger.svg"
               alt=""
-              class="menu__burger-open"
             >
           </a>
-          <a href="#">
-            <h2 class="logo">
+
+          <h2 class="header__logo logo">
+            <a href="#">
               NA
               <br>
               MU
-            </h2>
-          </a>
+            </a>
+          </h2>
         </div>
       </div>
 
@@ -368,10 +368,7 @@
           </p>
         </div>
 
-        <!-- <a href="#" class="go-up footer__go-up">
-          <img src="./images/icons/up-arrow.svg" alt="arrow up">
-        </a> -->
-        <div class="line"></div>
+        <a href="#" class="go-up footer__go-up"></a>
 
         <nav class="nav footer__nav">
           <ul class="nav__list">
