--- a/src/index.html
+++ b/src/index.html
@@ -336,7 +336,7 @@
 
                 <a
                   href="https://goo.gl/maps/gK3EHFkpYW44rYS97"
-                  class="footer__phone-link footer__map-link"
+                  class="footer__map-link footer__phone-link"
                   target="_blank"
                 >
                   тел. +38 (044) 278-13-57
@@ -344,7 +344,7 @@
 
                 <a
                   href="https://goo.gl/maps/gK3EHFkpYW44rYS97"
-                  class="footer__fax-link footer__map-link"
+                  class="footer__map-link footer__fax-link"
                   target="_blank"
                 >
                   факс +38 (044) 278-74-54
@@ -352,7 +352,7 @@
 
                 <a
                   href="https://goo.gl/maps/gK3EHFkpYW44rYS97"
-                  class="footer__email-link footer__map-link"
+                  class="footer__map-link footer__email-link"
                   target="_blank"
                 >
                   e-mail: info@namu.kiev.ua
