--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="scripts/main.js"></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <div class="grid grid--tablet">
+      <div
+        class="
+          grid__item
+          grid__item--tablet-4-6
+          grid__item--desktop-6-12
+        ">
+        <header class="page__header header">
+          <div class="header__bg">
+            <a href="#menu" class="icon icon--menu"></a>
+
+            <a href="#" class="logo header__logo">NA<br>MU</a>
+          </div>
+        </header>
+      </div>
+
+      <div
+        class="
+          grid__item
+          grid__item--tablet-1-3
+          grid__item--desktop-1-5
+        ">
+        <div class="page__art-museum art-museum">
+          <h1 class="art-museum__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
+
+          <div class="art-museum__tickets">
+            <a href="#current-events" class="art-museum__tickets-link">КВИТКИ</a>
+
+            <div class="art-museum__arrow"></div>
+          </div>
+
+          <div class="art-museum__events">
+            <div class="art-museum__events-line"></div>
+            <a href="#current-events" class="art-museum__events-link">ПОДІЇ</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="menu__cross icon icon--cross"></a>
+
+            <ul class="menu__list list">
+              <li class="list__item">
+                <a href="#gallery" class="list__link">Галерея</a>
+              </li>
+
+              <li class="list__item">
+                <a href="#about-us" class="list__link">Про Нас</a>
+              </li>
+
+              <li class="list__item">
+                <a href="#current-events" class="list__link">Виставки та<br>події</a>
+              </li>
+
+              <li class="list__item">
+                <a href="#contacts" class="list__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="menu__line"></div>
+
+          <div class="menu__schedule schedule">
+            <h4 class="menu__schedule-item schedule__title">Графік роботи</h4>
+
+            <p class="menu__schedule-item schedule__working">
+              <span class="schedule__bold">12:00 — 20:00</span> середа<br>
+              <span class="schedule__bold">12:00 — 20:00</span> четвер<br>
+              <span class="schedule__bold">12:00 — 20:00</span> п’ятниця<br>
+              <span class="schedule__bold">11:00 — 19:00</span> субота<br>
+              <span class="schedule__bold">11:00 — 19:00</span> неділя
+            </p>
+
+            <p class="menu__schedule-item schedule__weekend">
+              <span class="schedule__bold">Вихідні:</span> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до<br>
+              закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- <main>
+      <section class="page__section"></section>
+      <section class="page__section"></section>
+      <section class="page__section"></section>
+    </main>
+
+    <footer class="footer">
+
+    </footer> -->
   </body>
 </html>
