all header, menu  done

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="page">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,17 +11,18 @@
 
   <body class="body">
     <header class="header">
-      <div class="header__half-1">
-        <div class="header__container container">
-          <a href="#menu" class="header__burger-open">
-            <img
-              src="./images/icons/Burger.svg"
-              alt=""
-            >
-          </a>
+      <a href="#menu" class="header__burger-open">
+        <img
+          src="./images/icons/Burger.svg"
+          alt=menu burger icon"
+        >
+      </a>
 
-          <h2 class="header__logo logo">
-            <a href="#">
+      <div class="half-1 header__half-1">
+        <div class="half-1__content header__container container">
+
+          <h2 class="half-1__logo logo">
+            <a href="/">
               NA
               <br>
               MU
@@ -30,25 +31,29 @@
         </div>
       </div>
 
-      <div class="container">
-        <div class="header__half-2">
-          <h1 class="header__title">
-            ХУДОЖНІЙ МУЗЕЙ
-          </h1>
+      <div class="half-2">
+        <div class="container">
+          <div class="half-2__content">
+            <h1 class="half-2__title">
+              ХУДОЖНІЙ
+              <br>
+              МУЗЕЙ
+            </h1>
+    
+            <a href="/" class="half-2__button button">
+              <span class="button__title">
+                КВИТКИ
+              </span>
   
-          <a href="#tickets" class="button header__button">
-            <span class="button__title">
-              КВИТКИ
-            </span>
-
-            <div class="button__arrow">
-              <img
-                src="./images/icons/Arrow.svg"
-                alt="arrow"
-                class="button__arrow-img"
-              >
-            </div>
-          </a>
+              <div class="button__arrow">
+                <img
+                  src="./images/icons/Arrow.svg"
+                  alt="arrow"
+                  class="button__arrow-img"
+                >
+              </div>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -145,6 +150,9 @@
         </div>
   
         <div class="menu__eclipse"></div>
+      </div>
+      <div class="header__event-badge-desktop">
+        ПОДІЇ
       </div>
     </header>
 
