header, menu, footer for mobile were added

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="./images/favicon.svg">
+    <script src="scripts/main.js" defer></script>
   </head>
-  <body class="page__body">
+  <body class="page__body" id="top">
     <header class="header">
       <div class="container">
-        <div class="header__nav">
-          <a href="#" class="header__menu"></a>
+        <div class="top-acions">
+          <a href="#menu" class="icon icon--menu"></a>
         
           <div class="header__logo">
             <a href="/" class="logo">
@@ -48,7 +49,166 @@
         </div>
       </div>
     </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__content">
+        
+        <div class="menu__nav">
+          <div class="top-actions menu__nav--icon">
+            <a href="#" class="icon icon--cross"></a>
+          </div>
+          <ul class="menu__list list-nav">
+            <li class="list-nav__item">
+              <a href="#gallery" class="list-nav__link">Галерея</a>
+            </li>
+            <li class="list-nav__item">
+              <a href="#subscribe" class="list-nav__link">Про Нас</a>
+            </li>
+            <li class="list-nav__item">
+              <a href="#events" class="list-nav__link">Виставки та<br> події</a>
+            </li>
+            <li class="list-nav__item">
+              <a href="#footer" class="list-nav__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="schedule">
+          <h3 class="schedule--title">Графік роботи</h3>
+
+          <p class="schedule--schedule">
+            <span class="bold">12:00 — 20:00</span> середа <br>
+            <span class="bold">12:00 — 20:00</span> четвер <br>
+            <span class="bold">12:00 — 20:00</span> п’ятниця <br>
+            <span class="bold">11:00 — 19:00</span> субота <br>
+            <span class="bold">11:00 — 19:00</span> неділя
+          </p>
+
+          <p class="schedule--descriptions">
+            <span class="bold">Вихідні:</span> понеділок, вівторок <br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+    </nav>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__social-media">
+          <a href="/" class="logo">
+            NA<br>MU
+          </a>
+          <div class="footer__social-media--icon">
+            <a 
+              target="_blank"
+              href="https://www.facebook.com/namu.museum/" 
+              class="icon icon--facebook"
+            >
+            </a>
+            <a 
+              target="_blank"
+              href="https://instagram.com/namu.museum?igshid=OGQ2MjdiOTE=" 
+              class="icon icon--instagram"
+            >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__info">
+          <div class="footer__schedule schedule">
+            <h3 class="schedule--title">Графік роботи</h3>
+            <p class="schedule--schedule">
+              <span class="bold">12:00 — 20:00</span> середа <br>
+              <span class="bold">12:00 — 20:00</span> четвер <br>
+              <span class="bold">12:00 — 20:00</span> п’ятниця <br>
+              <span class="bold">11:00 — 19:00</span> субота <br>
+              <span class="bold">11:00 — 19:00</span> неділя
+            </p>
+            <p class="schedule--descriptions">
+              Вихідні понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+          <div class="footer__contacts">
+            <h3 class="footer__contacts--title">Контакти:</h3>
+            <a
+              href="https://goo.gl/maps/SjwqSSYM2fQNA5tw5"
+              target="_blank"
+              class="footer__contacts--link"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a
+              href="tel:+38 (044) 278-13-57"
+              class="footer__contacts--link"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+            <a
+              href="tel:+38 (044) 278-74-54"
+              class="footer__contacts--link"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="footer__contacts--link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+          <a 
+            href="#top" 
+            class="footer__button-top icon icon--to-top"
+          ></a>
+        </div>
+
+        <div class="footer__nav">
+          <ul class="list-nav list-nav--footer">
+            <li class="list-nav__item list-nav__item--footer">
+              <a 
+                href="#gallery" 
+                class="list-nav__link list-nav__link--footer"
+              >
+                Галерея
+              </a>
+            </li>
+
+            <li class="list-nav__item list-nav__item--footer">
+              <a 
+                href="#subscribe" 
+                class="list-nav__link list-nav__link--footer"
+              >
+                Про Нас
+              </a>
+            </li>
+
+            <li class="list-nav__item list-nav__item--footer">
+              <a 
+                href="#events" 
+                class="list-nav__link list-nav__link--footer"
+              >
+                Виставки та події
+              </a>
+            </li>
+
+            <li class="list-nav__item list-nav__item--footer">
+              <a 
+                href="#footer" 
+                class="list-nav__link list-nav__link--footer"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__copyright">
+          Designed by Zhyriada Marina <br>
+          Copyright &#169 2019. All Rights Reserved.
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
-
-
