--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,445 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="icon" type="image" href="images/NA MU.svg">
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__content">
+        <div class="container">
+          <div class="grid grid--flex">
+            <a href="#menu" class="icon icon__menu"></a>
+            <div class="grid__item--tablet-4-5 grid__item--desktop-6-7">
+              <a href="#" class="logo">
+                NA
+                <br>
+                MU
+              </a>
+            </div>
+            <div class="header__empty"></div>
+          </div>
+          <div class="header__title">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </div>
+          <div class="grid grid--block">
+            <div class="grid__item--tablet-1-2 grid__item--desktop-3-5">
+              <a href="#contacts" class="header__button">
+                <div class="header__button-text">
+                  Квитки
+                </div>
+                <div class="button__green">
+                  <img
+                    src="../src/images/right_arrow.svg"
+                    alt="arrow"
+                    class="arrow">
+                </div>
+              </a>
+            </div>
+          </div>
+          <a href="#events" class="event__link">Події</a>
+        </div>
+      </div>
+    </header>
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__content-link">
+            <div class="menu__content-cross">
+              <a href="#" class="icon icon__close"></a>
+            </div>
+            <div class="nav__item">
+              <div class="nav__link">
+                <div class="nav__box">
+                  <a href="#gallery"  class="menu__link">
+                    Галерея
+                  </a>
+                </div>
+              </div>
+              <div class="nav__link">
+                <div class="nav__box">
+                  <a href="#events" class="menu__link">
+                    Виставки та події
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="nav__item">
+              <div class="nav__link">
+                <div class="nav__box">
+                  <a href="#" class="menu__link">
+                    Про нас
+                  </a>
+                </div>
+              </div>
+              <div class="nav__link">
+                <div class="nav__box">
+                  <a href="#contacts" class="menu__link">
+                    Контакти
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="menu__line">
+          </div>
+
+          <div class="menu__bottom">
+            <div class="menu__timetable">
+              <h3 class="title day">
+                Графік роботи
+              </h3>
+              <h3 class="day">
+                <strong>
+                  12:00 - 20:00
+                </strong>
+                &nbsp середа
+              </h3>
+              <h3 class="day">
+                <strong>
+                  12:00 - 20:00
+                </strong>
+                &nbsp четвер
+              </h3>
+              <h3 class="day">
+                <strong>
+                  12:00 - 20:00
+                </strong>
+                &nbsp п'ятниця
+              </h3>
+              <h3 class="day">
+                <strong>
+                  11:00 - 19:00
+                </strong>
+                &nbsp субота
+              </h3>
+              <h3 class="day">
+                <strong>
+                  11:00 - 19:00
+                </strong>
+                &nbsp неділя
+              </h3>
+            </div>
+            <div class="menu__remark">
+              <strong>Вихідні:</strong>
+              понеділок, вівторок
+              </br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <section class="page__section events" id="events">
+        <div class="container">
+          <div class="event__title">
+            Актуальні події
+          </div>
+            <div class="event__block-1 grid grid--block">
+              <div class="grid__item--desktop-1-7  grid__item--tablet-1-6">
+                <div class="event__painting">
+                  <img src="../src/images/painting1.jpg" alt="painting1" class="events__photo">
+                </div>
+              </div>
+              <div class="grid__item--desktop-8-12 grid__item--tablet-1-6">
+                <div class="just__description">
+                  <div class="event__painting--timetable">
+                    <div class="exibition">Виставка</div>
+                    <div class="exibition__date">26.08-29.11.2019</div>
+                  </div>
+                  <div class="exibition__name">
+                    <div class="exibition__name-words">
+                      Йду і повертаюсь
+                    </div>
+                    <div class="exibition__name-square" >
+                      <img src="../src/images/Rectangle.svg" alt="square" class="square">
+                    </div>
+                  </div>
+                  <div class="exibition__description">
+                    Національний Художній Музей України
+                    презентує унікальну частину колекції
+                    Градобанку - українське мистецтво
+                    другої половини 1980-1995 років.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="event__block-2 grid grid--block">
+              <div class="grid__item--desktop-1-7 grid__item--tablet-1-6">
+                <div class="event__painting">
+                  <img src="../src/images/painting2.jpg" alt="painting2" class="events__photo">
+                </div>
+              </div>
+              <div class="grid__item--desktop-8-12 grid__item--tablet-1-6">
+                <div class="just__description">
+                  <div class="event__painting--timetable">
+                    <div class="exibition">Виставка</div>
+                    <div class="exibition__date">26.08-29.11.2019</div>
+                  </div>
+                  <div class="exibition__name">
+                    <div class="exibition__name-words">
+                      І спогади і мрії
+                    </div>
+                    <div class="exibition__name-square" >
+                      <img src="../src/images/Rectangle.svg" alt="square" class="square">
+                    </div>
+                  </div>
+                  <div class="exibition__description">
+                    Національний художній музей України
+                    до 100 річчя від дня народження
+                    видатної української художниці
+                    Тетяни Яблонської  відкриває ретроспективну
+                    ювілейну виставку «І спогади і мрії».
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="event__lecture">
+          <div class="event__bottom">
+            <img src="../src/images/painting3.jpg" alt="painting3" class="lecture__painting">
+          </div>
+          <div class="lecture__info">
+            <div class="photo__container">
+              <div class="lecture--timetable">
+                <div class="exibition">ЛЕКЦІЯ</div>
+                <div class="exibition__date">24/02/2022 - 04:00</div>
+              </div>
+              <div class="lecture__title">
+                Від класицизму до романтизму
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+      <section class="page__gallery" id="gallery">
+        <div class="container">
+          <div class="gallery__title">
+            Галерея
+          </div>
+          <div class="container__gallery">
+
+            <div class=" grid grid--flex">
+
+                <div class="gallery grid__item--desktop-1-4 ">
+                  <img src="../src/images/gallery1.jpg" alt="picture1" class="gallery__image">
+                </div>
+
+                <div class="gallery grid__item--desktop-5-12 ">
+                  <img src="../src/images/gallery2.jpg" alt="picture1" class="gallery__image">
+                </div>
+                <div class="empty"></div>
+
+              <div class="gallery grid__item--desktop-1-8 ">
+                <img src="../src/images/gallery3.jpg" alt="picture1" class="gallery__image">
+              </div>
+
+              <div class="gallery grid__item--desktop-9-12">
+                <img src="../src/images/gallery4.jpg" alt="picture1" class="gallery__image">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container wrapper">
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="../src/images/gallery1.jpg" alt="picture1" class="swiper-slide__img">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="../src/images/gallery2.jpg" alt="picture2" class="swiper-slide__img">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="../src/images/gallery3.jpg" alt="picture3" class="swiper-slide__img">
+              </div>
+
+              <div class="swiper-slide">
+                <img src="../src/images/gallery4.jpg" alt="picture4" class="swiper-slide__img">
+              </div>
+            </div>
+
+            <div class="swiper-pagination"></div>
+
+          </div>
+        </div>
+
+
+
+      </section>
+      <section class="page__section subscribe">
+        <div class="subscribe__container">
+          <div class="subscribe__title">
+            Підписка
+          </div>
+          <div class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <div class="grid grid--block subscr">
+            <div class="grid__item--tablet-2-5 grid__item--desktop-4-9">
+              <form
+                action="#"
+                class="form__subscr">
+                  <input class="form__field--subscr" type="email"
+                    placeholder="E-mail" required
+                  >
+                  <button class="button__orange">
+                    <img src="../src/images/Vector_black.svg" alt="button" class="arrow">
+                  </button>
+              </form>
+            </div>
+          </div>
+        </div>
+
+      </section>
+    </main>
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="grid">
+          <div class="grid__item--1-2 grid__item--tablet-1-1 grid__item--desktop-1-2">
+            <div class="footer__icon">
+              <a href="#" class="footer__logo">
+                NA
+                <br>
+                MU
+              </a>
+              <div class="footer__icon-social">
+                <a href="https://www.facebook.com/" target="_blank" class="icon icon__social">
+                  <img src="../src/images/Facebook.svg" alt="facebook" class="footer__logo">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" class="icon icon__social">
+                  <img src="../src/images/inst.png" alt="instagram" class="footer__logo">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <div class="footer__timetable">
+              <h3 class="footer__timetable-title">
+                Графік роботи
+              </h3>
+              <h3 class="footer__timetable-day">
+                <strong>
+                  12:00 - 20:00
+                </strong>
+                &nbsp середа
+              </h3>
+              <h3 class="footer__timetable-day">
+                <strong>
+                  12:00 - 20:00
+                </strong>
+                &nbsp четвер
+              </h3>
+              <h3 class="footer__timetable-day">
+                <strong>
+                  12:00 - 20:00
+                </strong>
+                &nbsp п'ятниця
+              </h3>
+              <h3 class="footer__timetable-day">
+                <strong>
+                  11:00 - 19:00
+                </strong>
+                &nbsp субота
+              </h3>
+              <h3 class="footer__timetable-day">
+                <strong>
+                  11:00 - 19:00
+                </strong>
+                &nbsp неділя
+              </h3>
+            </div>
+            <div class="footer__timetable-remark">
+              <strong>Вихідні:</strong>
+              понеділок,</br> вівторок
+              </br>
+              Каса припиняє роботу за 1
+              <span>годину до закриття музею</span>
+            </div>
+          </div>
+          <div class="grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+            <div class="footer__timetable-title">
+              Контакти
+            </div>
+            <div class="footer__address">
+              <a href="https://goo.gl/maps/bcnzhs7nMKdWsry97" target="_blank" alt="address" class="footer__text">
+                вул.М. Грушевського, 6; Київ, 01001
+              </a>
+            </div>
+            <div class="footer__phone">
+              <a href="tel: +38(044)278-13-57" alt="phone" target="_blank" class="footer__text">
+                тел. +38(044)278-13-57
+              </a>
+            </div>
+            <div class="footer__fax">
+              <a href="fax: +38(044)278-74-54" target="_blank" alt="fax" class="footer__text">
+                факс +38(044)278-74-54
+              </a>
+            </div>
+            <div class="footer__email">
+              <a href="mailto: info@namu.kiev.ua" target="_blank" alt="email" class="footer__text">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+          <div class="grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7">
+            <div class="footer__line">
+
+            </div>
+          </div>
+          <div class="grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <div class="nav__item nav__item--footer">
+              <div class="nav__box--footer">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </div>
+              <div class="nav__box--footer">
+                <a href="#events" class="nav__link">
+                  Виставки та події
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+            <div class="nav__item nav__item--footer">
+              <div class="nav__box--footer">
+                <a href="#events" class="nav__link">
+                  Про нас
+                </a>
+              </div>
+              <div class="nav__box--footer">
+                <a href="#contacts" class="nav__link">
+                  Контакти
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <div class="footer__bottom-text">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+          <div class="footer__bottom-text">
+            Designed by Donets Yevhen
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
+
