--- a/src/index.html
+++ b/src/index.html
@@ -157,67 +157,71 @@
     </header>
 
     <main>
-      <div class="container">
-        <div class="events" id="events">
-          <h2 class="events__title">
-            Актуальні події
-          </h2>
+      <div class="events" id="events">
+        <div class="container">
+          <div class="events__content">
+            <h2 class="events__title">
+              Актуальні події
+            </h2>
 
-          <div class="exhibition">
-            <img
-              src="./images/Rectangle-2.1.png"
-              alt="painting"
-              class="exhibition__img"
-            >
-
-            <div class="exhibition__box">
-              <span class="exhibition__box-type">
-                ВИСТАВКА
-              </span>
-
-              <span class="exhibition__box-date">
-                26.08-29.11.2019
-              </span>
+            <div class="exhibition">
+              <img
+                src="./images/Rectangle-2.1.png"
+                alt="painting"
+                class="exhibition__img"
+              >
+  
+              <div class="exhibition__box">
+                <span class="exhibition__box-type">
+                  ВИСТАВКА
+                </span>
+  
+                <span class="exhibition__box-date">
+                  26.08-29.11.2019
+                </span>
+              </div>
+  
+              <h3 class="exhibition__title">
+                Йду і повертаюсь
+              </h3>
+  
+              <p class="exhibition__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
             </div>
-
-            <h3 class="exhibition__title">
-              Йду і повертаюсь
-            </h3>
-
-            <p class="exhibition__text">
-              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-            </p>
-          </div>
-
-          <div class="exhibition">
-            <img src="./images/Rectangle-4.1.png"
-              alt="painting"
-              class="exhibition__img"
-            >
-
-            <div class="exhibition__box">
-              <span class="exhibition__box-type">
-                ВИСТАВКА
-              </span>
-
-              <span class="exhibition__box-date">
-                26.08-29.11.2019
-              </span>
+  
+            <div class="exhibition">
+              <img src="./images/Rectangle-4.1.png"
+                alt="painting"
+                class="exhibition__img"
+              >
+  
+              <div class="exhibition__box">
+                <span class="exhibition__box-type">
+                  ВИСТАВКА
+                </span>
+  
+                <span class="exhibition__box-date">
+                  26.08-29.11.2019
+                </span>
+              </div>
+  
+              <h3 class="exhibition__title">
+                І спогади і мрії
+              </h3>
+  
+              <p class="exhibition__text">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
             </div>
-
-            <h3 class="exhibition__title">
-              І спогади і мрії
-            </h3>
-
-            <p class="exhibition__text">
-              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-            </p>
           </div>
         </div>
       </div>
 
       <div class="lecture">
-        <div class="lecture__container">
+        <img src="./images/Rectangle-20.png" alt="painting" class="lecture__img">
+
+        <div class="lecture__content">
           <div class="lecture__box">
             <span class="lecture__box-type">
               ЛЕКЦІЯ
@@ -227,12 +231,30 @@
               26/08/2019 - 11:00
             </span>
           </div>
-  
+
           <h3 class="lecture__title">
             Від класицизму до романтизму
           </h3>
         </div>
       </div>
+<!-- 
+      <div class="lecture">
+        <div class="lecture__container">
+          <div class="lecture__content">
+            <span class="lecture__content-type">
+              ЛЕКЦІЯ
+            </span>
+  
+            <span class="lecture__content-date">
+              26/08/2019 - 11:00
+            </span>
+          </div>
+  
+          <h3 class="lecture__title">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </div> -->
 
       <div class="gallery container" id="gallery">
         <h2 class="gallery__title">
