subscription all done

--- a/src/index.html
+++ b/src/index.html
@@ -237,33 +237,13 @@
           </h3>
         </div>
       </div>
-<!-- 
-      <div class="lecture">
-        <div class="lecture__container">
-          <div class="lecture__content">
-            <span class="lecture__content-type">
-              ЛЕКЦІЯ
-            </span>
-  
-            <span class="lecture__content-date">
-              26/08/2019 - 11:00
-            </span>
-          </div>
-  
-          <h3 class="lecture__title">
-            Від класицизму до романтизму
-          </h3>
-        </div>
-      </div> -->
 
       <div class="gallery container" id="gallery">
         <h2 class="gallery__title">
           Галерея
         </h2>
-        <div class="swiper">
-          <!-- Additional required wrapper -->
+        <!-- <div class="swiper">
           <div class="swiper-wrapper">
-            <!-- Slides -->
             <div class="swiper-slide">
               <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
             </div>
@@ -280,13 +260,12 @@
               <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
             </div>
           </div>
-          <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
-        </div>
+        </div> -->
       </div>
 
       <div class="subscription">
-        <div class="container">
+        <div class="subscription__content">
           <h2 class="subscription__title">
             Підписка
           </h2>
