--- a/src/index.html
+++ b/src/index.html
@@ -99,14 +99,96 @@
       </div>
     </nav>
 
-    <!-- <main>
+    <main>
+      <section class="page__current-events current-events">
+        <div class="container">
+          <h2 class="current-events__title">Актуальні події</h2>
+
+          <div class="current-events__card card">
+            <div class="grid grid--desktop">
+              <div
+                class="
+                  grid__item
+                  grid__item--desktop-1-7
+                ">
+                <div class="card__photo-container">
+                  <img
+                    src="./images/photos/current-event-1.jpg"
+                    alt="current-event-1"
+                    class="card__photo"
+                  >
+                </div>
+              </div>
+
+              <div
+                class="
+                  grid__item
+                  grid__item--desktop-9-12
+                ">
+                <div class="card__info">
+                  <div class="card__top-info">
+                    <div class="card__event-type">ВИСТАВКА</div>
+
+                    <div class="card__event-date">26.08-29.11.2019</div>
+                  </div>
+
+                  <h3 class="card__title">Йду і повертаюсь</h3>
+
+                  <p class="card__description">
+                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="current-events__card card">
+            <div class="grid grid--desktop">
+              <div
+                class="
+                  grid__item
+                  grid__item--desktop-1-7
+                ">
+                <div class="card__photo-container">
+                  <img
+                    src="./images/photos/current-event-2.jpg"
+                    alt="current-event-2"
+                    class="card__photo"
+                  >
+                </div>
+              </div>
+
+              <div
+                class="
+                  grid__item
+                  grid__item--desktop-9-12
+                ">
+                <div class="card__info">
+                  <div class="card__top-info">
+                    <div class="card__event-type">ВИСТАВКА</div>
+
+                    <div class="card__event-date">26.08-29.11.2019</div>
+                  </div>
+
+                  <h3 class="card__title">І спогади і мрії</h3>
+
+                  <p class="card__description">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="page__section"></section>
-      <section class="page__section"></section>
+
       <section class="page__section"></section>
     </main>
 
     <footer class="footer">
 
-    </footer> -->
+    </footer>
   </body>
 </html>
