desktop gallery done

--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,7 @@
         <h2 class="gallery__title">
           Галерея
         </h2>
-        <!-- <div class="swiper">
+        <!-- <div class="swiper gallery__swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
@@ -262,6 +262,32 @@
           </div>
           <div class="swiper-pagination"></div>
         </div> -->
+
+        <div class="gallery__desktop">
+          <img
+            src="./images/Rectangle-13.5.png"
+            alt="painting"
+            class="gallery__desktop-img gallery__desktop-img-1"
+          >
+
+          <img
+            src="./images/Rectangle 3.1.png"
+            alt="painting"
+            class="gallery__desktop-img gallery__desktop-img-2"
+          >
+
+          <img
+            src="./images/Rectangle 13.3.png"
+            alt="painting"
+            class="gallery__desktop-img gallery__desktop-img-3"
+          >
+
+          <img
+            src="./images/Rectangle 13.4.png"
+            alt="painting"
+            class="gallery__desktop-img gallery__desktop-img-4"
+          >
+        </div>
       </div>
 
       <div class="subscription">
