section EVENTS was added for all devises

--- a/src/index.html
+++ b/src/index.html
@@ -154,6 +154,35 @@
             </div>
           </div>
 
+          <!-- <div class="grid">
+            <div class="grid__item grid__item--desktop-1-7">
+              <img
+              src="./images/event1.png"
+              alt="Фото 'Йду і повертаюсь'"
+              class="events__photo"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-9-12">
+              <div class="events__info">
+                <div class="events__top-info">
+                  <p class="events__top-info--name">
+                    ВИСТАВКА
+                  </p>
+                  <p class="events__top-info--date">
+                    26.08-29.11.2019
+                  </p>
+                </div>
+  
+                <h3 class="events__title">
+                  Йду і повертаюсь
+                </h3>
+  
+                <p class="events__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+          </div> -->
         </div>
       </section>
 
