--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,11 @@
       <div class="container">
         <div class="header__content">
           <a href="#menu" class="header__icon">
-            <img src="images/header/menu-opener.svg" alt="Open menu" class="icon icon--open">
+            <img
+              src="images/header/menu-opener.svg"
+              alt="Open menu"
+              class="icon icon--open"
+            >
           </a>
 
           <h1 class="header__title header__title--top">Художній музей</h1>
@@ -35,7 +39,11 @@
 
         <div class="header__background">
           <a href="#home" class="header__logo">
-            <img src="images/logo/namu.svg" alt="Na mu" class="logo">
+            <img
+              src="images/logo/namu.svg"
+              alt="Na mu"
+              class="logo"
+            >
           </a>
         </div>
       </div>
@@ -49,7 +57,11 @@
           <div class="nav__block">
             <div class="nav__header">
               <a href="#close" class="nav__close">
-                <img src="./images/header/close-menu.svg" alt="Close menu" class="icon icon--cross">
+                <img
+                  src="./images/header/close-menu.svg"
+                  alt="Close menu"
+                  class="icon icon--cross"
+                >
               </a>
       
               <ul class="nav__list">
@@ -176,19 +188,35 @@
 
           <div class="gallery__section gallery__section--top">
             <div class="gallery__photo gallery__photo--1">
-              <img src="images/gallery/gallery-first.png" alt="Gallery photo" class="gallery__img">
+              <img
+                src="images/gallery/gallery-first.png"
+                alt="Gallery photo"
+                class="gallery__img"
+              >
             </div>
 
             <div class="gallery__photo gallery__photo--2">
-              <img src="images/gallery/gallery-two.png" alt="Museum photo" class="gallery__img">
+              <img
+                src="images/gallery/gallery-two.png"
+                alt="Museum photo"
+                class="gallery__img"
+              >
             </div>
 
             <div class="gallery__photo gallery__photo--3">
-              <img src="images/gallery/gallery-three.png" alt="Exponat" class="gallery__img">
+              <img
+                src="images/gallery/gallery-three.png"
+                alt="Exponat"
+                class="gallery__img"
+              >
             </div>
 
             <div class="gallery__photo gallery__photo--4">
-              <img src="images/gallery/gallery-four.png" alt="Photo" class="gallery__img">
+              <img
+                src="images/gallery/gallery-four.png"
+                alt="Photo"
+                class="gallery__img"
+              >
             </div>
           </div>
 
