--- a/src/index.html
+++ b/src/index.html
@@ -238,32 +238,36 @@
         </div>
       </div>
 
-      <div class="gallery container" id="gallery">
-        <h2 class="gallery__title">
-          Галерея
-        </h2>
-        <!-- <div class="swiper gallery__swiper">
+      <div class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+        </div>
+
+        <div class="swiper gallery__swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
+              <img src="./images/Rectangle-13.5.png" alt="painting" class="swiper-img">
             </div>
 
             <div class="swiper-slide">
-              <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
+              <img src="./images/Rectangle 24.1.png" alt="painting" class="swiper-img">
             </div>
 
             <div class="swiper-slide">
-              <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
+              <img src="./images/Rectangle-13.4.png" alt="painting" class="swiper-img">
             </div>
 
             <div class="swiper-slide">
-              <img src="./images/Rectangle-13.5.png" alt="" class="swiper-img">
+              <img src="./images/Rectangle 24.1.png" alt="painting" class="swiper-img">
             </div>
           </div>
-          <div class="swiper-pagination"></div>
-        </div> -->
 
-        <div class="gallery__desktop">
+          <div class="swiper-pagination"></div>
+        </div>
+
+        <div class="gallery__desktop container">
           <img
             src="./images/Rectangle-13.5.png"
             alt="painting"
@@ -330,12 +334,12 @@
           </h2>
 
           <div class="footer__social">
-            <a href="https://www.facebook.com/" target="_blank">
+            <a href="https://www.facebook.com/" target="_blank" class="footer__social-icon">
               <img src="./images/icons/Facebook.svg" alt="facebook.com">
             </a>
   
             <a href="https://www.instagram.com/" target="_blank">
-              <img src="./images/icons/instagram.svg" alt="instagram.com">
+              <img src="./images/icons/instagram.svg" alt="instagram.com" class="footer__social-icon">
             </a>
           </div>
 
@@ -449,6 +453,7 @@
         </div>
       </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
