--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
-    <link
-      rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="shortcut icon" href="./images/icons/favicon.svg" type="image/x-icon">
   </head>
 
   <body class="body">
@@ -14,7 +14,7 @@
       <a href="#menu" class="header__burger-open">
         <img
           src="./images/icons/Burger.svg"
-          alt=menu burger icon"
+          alt="menu burger icon"
         >
       </a>
 
@@ -40,7 +40,7 @@
               МУЗЕЙ
             </h1>
     
-            <a href="/" class="half-2__button button">
+            <a href="#events" class="half-2__button button">
               <span class="button__title">
                 КВИТКИ
               </span>
@@ -76,7 +76,7 @@
                 </li>
     
                 <li class="nav__item">
-                  <a href="#" class="nav__link">
+                  <a href="#subscription" class="nav__link">
                     Про Нас
                   </a>
                 </li>
@@ -248,19 +248,35 @@
         <div class="swiper gallery__swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="./images/Rectangle-13.5.png" alt="painting" class="swiper-img">
+              <img
+                src="./images/Rectangle-13.5.png"
+                alt="painting"
+                class="swiper-img"
+              >
             </div>
 
             <div class="swiper-slide">
-              <img src="./images/Rectangle 24.1.png" alt="painting" class="swiper-img">
+              <img
+                src="./images/Rectangle 24.1.png"
+                alt="painting"
+                class="swiper-img"
+              >
             </div>
 
             <div class="swiper-slide">
-              <img src="./images/Rectangle-13.4.png" alt="painting" class="swiper-img">
+              <img
+                src="./images/Rectangle-13.4.png"
+                alt="painting"
+                class="swiper-img"
+              >
             </div>
 
             <div class="swiper-slide">
-              <img src="./images/Rectangle 24.1.png" alt="painting" class="swiper-img">
+              <img
+                src="./images/Rectangle 24.1.png"
+                alt="painting"
+                class="swiper-img"
+              >
             </div>
           </div>
 
@@ -294,7 +310,7 @@
         </div>
       </div>
 
-      <div class="subscription">
+      <div class="subscription" id="subscription">
         <div class="subscription__content">
           <h2 class="subscription__title">
             Підписка
@@ -304,13 +320,15 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
   
-          <form action="#" method="get" class="subscription__form">
+          <form action="/" method="get" class="subscription__form">
             <input
               type="email"
               placeholder="E-mail"
               class="subscription__form-input"
+              required
             >
-            <button type="submit"  class="subscription__form-button">
+
+            <button type="submit" class="subscription__form-button">
               <img
                 src="./images/icons/Arrow.svg"
                 alt="arrow"
@@ -334,12 +352,20 @@
           </h2>
 
           <div class="footer__social">
-            <a href="https://www.facebook.com/" target="_blank" class="footer__social-icon">
-              <img src="./images/icons/Facebook.svg" alt="facebook.com">
+            <a href="https://www.facebook.com/" target="_blank">
+              <img
+                src="./images/icons/Facebook.svg"
+                alt="facebook.com"
+                class="footer__social-icon"
+              >
             </a>
   
             <a href="https://www.instagram.com/" target="_blank">
-              <img src="./images/icons/instagram.svg" alt="instagram.com" class="footer__social-icon">
+              <img
+                src="./images/icons/instagram.svg"
+                alt="instagram.com"
+                class="footer__social-icon"
+              >
             </a>
           </div>
 
@@ -420,9 +446,9 @@
                   Галерея
                 </a>
               </li>
-  
+
               <li class="nav__item footer__nav-item">
-                <a href="#" class="nav__link footer__nav-link">
+                <a href="#subscription" class="nav__link footer__nav-link">
                   Про Нас
                 </a>
               </li>
