fixed 404 and swiper, added links on contacts

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <div class="half-1__content header__container container">
 
           <h2 class="half-1__logo logo">
-            <a href="/">
+            <a href="index.html">
               NA
               <br>
               MU
@@ -320,7 +320,7 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
   
-          <form action="/" method="get" class="subscription__form">
+          <form action="index.html" method="get" class="subscription__form">
             <input
               type="email"
               placeholder="E-mail"
@@ -426,15 +426,27 @@
               Контакти:
             </span>
   
-            <p class="footer__contacts-info">
-              вул. М. Грушевського, 6; Київ, 01001
-              <br>
-              тел. +38 (044) 278-13-57
-              <br>
-              факс +38 (044) 278-74-54
-              <br>
-              e-mail: info@namu.kiev.ua
-            </p>
+            <div class="footer__contacts-info">
+              <a
+                href="https://goo.gl/maps/83BcMgU2jrCee4mV8"
+                target="_blank"
+                class="footer__contacts-link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a href="tel:+380442781357" class="footer__contacts-link">
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <a href="tel:+380442787454" class="footer__contacts-link">
+                факс +38 (044) 278-74-54
+              </a>
+
+              <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
           </div>
   
           <a href="#" class="go-up footer__go-up"></a>
